...
  return (
    <Tabs
      tabBar={props => <TerminalTabBar {...props} />}
      screenOptions={{ headerShown: false, freezeOnBlur: true }}
    >
      <Tabs.Screen name="index" options={{ title: 'Home' }} />
      <Tabs.Screen name="beerlist" options={{ title: 'All Beer' }} />
      <Tabs.Screen
        name="mybeers"
        options={{ title: 'Beerfinder', href: isInVisitorMode ? null : undefined }}
      />
      <Tabs.Screen
        name="tastedbrews"
        options={{ title: 'Tasted Brews', href: isInVisitorMode ? null : undefined }}
      />
    </Tabs>
...
